# existential

./: README.md  existential.cabal
src/Data/: Existential.hs
src/Data/Existential/: Map.hs
src/Data/Existential/Map/: Lazy.hs
